# cheatah-gpu

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  README.md  cheatah.toml
.githooks/: pre-push
cmake/: CPM.cmake  Vulkan.cmake
docs/: DESIGN.md
gpu/: backend.hpp  gpu.hpp  gpu.hpp.sha512
gpu/dispatch/: README.md  dispatch.hpp
gpu/metal/: README.md  metal.hpp  symbols.json  types.hpp
gpu/metal/emulated/: block_stubs.cpp  emulated.hpp  emulated_metal.cpp
gpu/metal/shim/: TargetConditionals.h
gpu/metal/shim/CoreFoundation/: CoreFoundation.h
gpu/metal/shim/IOSurface/: IOSurfaceRef.h
gpu/metal/shim/dispatch/: dispatch.h
gpu/metal/shim/mach/: mach.h
gpu/metal/shim/objc/: message.h  objc.h  runtime.h
gpu/vulkan/: README.md  commands.hpp  loader.hpp  symbols.json  types.hpp
scripts/: coverage.sh  cppcheck.sh  doc_coverage.sh  doctor.sh  install-deps.sh  metal_gate.sh  qa_gate.sh  release.sh  setup-hooks.sh  sign-modules.sh  test-biome-install.sh  vulkan_gate.sh  window_test.sh
security/: run-valgrind.sh  valgrind.supp
shaders/: cool.slang  hello.slang
systests/: check.purr  test_dispatch.purr  test_dispatch_limits.purr
systests/vulkan/: test_instance.purr
tests/: CMakeLists.txt  backend_test.cpp  dispatch_test.cpp
tests/metal/: metal_compute_test.cpp  metal_impl.cpp
tests/vulkan/: generated_presence_checks.cpp  handwritten_test.cpp  harness.hpp
tests/window/: smoke.cpp  test_window.purr  window.cpp  window.hpp
tools/metal-gen/: generate.purr  regenerate.sh
tools/vulkan-gen/: generate.purr
